--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -225,7 +225,8 @@
           <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
         </defs>
       </svg>
-      <h1>Hello, {{ title }}</h1>
+      <h1>{{ title | titlecase }}</h1>
+      <h2>By: Filipe da Silva Rodrigues 💻🎈</h2>
       <p>Congratulations! Your app is running. 🎉</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
